# novel-ai-data-pipeline

./: .gitignore  ACKNOWLEDGMENTS.md  CONTRIBUTIONS.md  DATA_LICENSE.md  LICENSE  PROVENANCE.md  README.md  SECURITY.md  pyproject.toml  requirements-dashboard.txt  run_demo.ps1  run_demo.sh
.github/workflows/: ci.yml
architecture/: data_lineage.md  system_architecture.md
artifacts/: .novel_evidence_demo_root
artifacts/datasets/: evaluation_isolated.jsonl  preference_train.jsonl  sft_train.jsonl  sft_validation.jsonl  split_assignments.jsonl  story_catalog.jsonl
artifacts/manifests/: checksums.sha256  release_manifest.json  (+1 more)
contracts/: canonical_story.schema.json  evaluation_task.schema.json  preference_pair.schema.json  quality_metrics.schema.json  raw_record.schema.json  release_manifest.schema.json  sft_sample.schema.json
dashboard/: README.md  app.py
docs/: delivery_checklist.md  interview_walkthrough.md  resume_evidence_mapping.md  verification_report.md
evidence/: evidence_index.md  publication_evidence_template.md  revenue_evidence_template.md  usage_evidence_template.md
experiments/: README.md
governance/: annotation_and_blind_eval_protocol.md  data_dictionary.md  data_quality_contract.md  data_quality_contract.yaml  dataset_card.md  redaction_guide.md  removal_ledger_demo.csv  rights_ledger_demo.csv
scripts/: check_public_repo.py  run_demo.py
tests/: __init__.py  json_schema_subset.py  test_generated_contracts.py  test_generator.py  test_pipeline_e2e.py  test_publication_safety.py  test_rights_and_dedup.py  test_splitting_and_datasets.py
(+42 files in other folders)
